completed markup for index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,115 @@
     <link rel="stylesheet" href="dis/css/main.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="hero-wrapper">
+      <div class="wrapper">
+        <header>
+          <a href="#" class="logo">CoreyHammond</a>
+
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </header>
+
+        <div class="hero-content">
+          <h1>Mockup Web Design Project</h1>
+          <p class="subtitle">Design to build exercise</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="light-purple-wrapper">
+      <div class="wrapper">
+        <ul class="stats">
+          <li>
+            <strong>32.5M</strong>
+            <span>YouTube Views</span>
+          </li>
+          <li>
+            <strong>620k</strong>
+            <span>YouTube Subs</span>
+          </li>
+          <li>
+            <strong>112</strong>
+            <span>Courses</span>
+          </li>
+          <li>
+            <strong>625</strong>
+            <span>Video Tutorials</span>
+          </li>
+          <li>
+            <strong>55</strong>
+            <span>Countries</span>
+          </li>
+        </ul>
+      </div>
+
+      <div class="extended-wrapper carousel-container">
+        <img
+          src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/arrow_copy_copy.svg"
+          id="left-arrow"
+          class="arrows"
+          alt="Move testimonials to the left"
+        />
+
+        <ul class="carousel">
+          <li>
+            <blockquote>"Great things said about this website here"</blockquote>
+            <cite>John Doe</cite>
+          </li>
+          <li>
+            <blockquote>"Great things said about this website here"</blockquote>
+            <cite>John Doe</cite>
+          </li>
+        </ul>
+
+        <img
+          src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/arrow_copy_copy.svg"
+          id="right-arrow"
+          class="arrows"
+          alt="Move testimonials to the right"
+        />
+      </div>
+    </div>
+
+    <div class="wrapper move-up v-padding">
+      <h2>Companies I've worked with..</h2>
+
+      <ul class="companies">
+        <li>
+          <img
+            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/skillshare.svg"
+            alt="Skillshare"
+            class="skillshare"
+          />
+        </li>
+        <li>
+          <img
+            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/ps.svg"
+            alt="Pluralsight"
+            class="ps"
+          />
+        </li>
+        <li>
+          <img
+            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/skillshare.svg"
+            alt="Skillshare"
+            class="skillshare"
+          />
+        </li>
+        <li>
+          <img
+            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/ps.svg"
+            alt="Pluralsight"
+            class="ps"
+          />
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
