mobile-first css complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="hero-wrapper">
       <div class="wrapper">
-        <header>
+        <header class="header">
           <a href="#" class="logo">CoreyHammond</a>
 
           <nav>
