added larger screen media queries

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img
           src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/arrow_copy_copy.svg"
           id="left-arrow"
-          class="arrows"
+          class="arrows left"
           alt="Move testimonials to the left"
         />
 
@@ -76,7 +76,7 @@
         <img
           src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2621168/arrow_copy_copy.svg"
           id="right-arrow"
-          class="arrows"
+          class="arrows right"
           alt="Move testimonials to the right"
         />
       </div>
